# pepper

./: .gitignore  .gitlab-ci.yml  .nfs000000001bbf1f5d000001bc  AdUtils.py  Fileset.py  GenHists.root  KinRecoSonnenschein.py  README.md  betchartkinreco.py  btagging.py  calculate_DY_SFs.py  calculate_triggerSFs.py  compute_btag_efficiencies.py  compute_kinreco_hists.py  compute_mc_lumifactors.py  compute_pileup_weights.py  compute_scalefactors_data-driven.py  condor_cmssw.sh  config_documentation.md  config_ttbarll_documentation.md  config_utils.py  cutflows.coffea  delete_duplicate_cols.py  delete_duplicate_outputs.py  genHists.py  gencomp.py  generate_btag_efficiencies.py  hist_defns.py  hist_prod.py  infiles.py  main.py  mc_lumifactors.py  merge_hists.py  plot_control.py  plotter.py  proc_utils.py  processor.py  produce_DY_numbers.py  produce_triggerSF_numbers.py  select_events.py  (+7 more)
example/: DY_SF_config.json  config.json  config_ttbarll.json  crosssections.json  env_lcg100.sh  environment.sh  example_config.json  example_histograms.json  example_processor.py  hist_config.json  plot_config.json  seed.txt
kin_reco/: genHists.py  sonnenschein.py
pepper/: DY_CR_processor.py  __init__.py  accumulator.py  betchart_kinreco.py  btagging.py  config.py  config_basic.py  config_ttbarll.py  datasets.py  executor.py  hdffile.py  hist_defns.py  kinreco.py  kinreco_sonnenschein.py  lazytable.py  misc.py  output_filler.py  parsl_high_throughput.py  plot.py  processor.py  processor_basic.py  processor_ttbarll.py  runproc.py  scale_factors.py  selector.py  top_reco.py  utils.py
(+27 files in other folders)
