[metadata]
name = pepper
version = 1.0
description = ParticlE Physics ProcEssoR

[options]
packages = find:
install_requires =
    coffea >= 0.7.11
    awkward >= 1.7.0
    parsl >= 1.1
    h5py
    hdf5plugin
    hist
    hjson
    correctionlib

[options.extras_require]
dev =
    pep8-naming

[flake8]
extend-ignore = N806

[mypy]
ignore_missing_imports = True
